# programming-paradigms

./: .project  README.md
lexparse/: README.md
lexparse/code/: ClassVisitor.java  DuplicateVisitor.java  EntryVisitor.java  Main.java  Node.java  ScopeNode.java  SimpleLang.g4  UndeclaredVisitor.java  simple
lexparse/tests/: 14.prog  15.prog  16.prog  17.prog  18.prog  19.prog  20.prog  21.prog  cv_fail.prog  cv_success.prog
project/: .gitignore  README.md  client.sh  compile_grammar.sh  go.sh  grammar.sh  neo4j.sh  ocaml.sh  s  smalltalk.sh
project/antlr/: CMakeLists.txt  Cypher.g4  main.cpp
project/pharo/: visualize.st
project/pharo/MyGraph/: Edge.class.st  Graph.class.st  GraphVis.class.st  Node.class.st  package.st
project/server/: go.mod  server.go
project/table/: dune-project
project/table/lib/: dune
project/table/test/: dune
